# nanoseek

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: 01_MLA_DEEP_DIVE.md  02_MOE_DEEP_DIVE.md  03_MTP_DEEP_DIVE.md  04_DSA_DEEP_DIVE.md  05_TRAINING_PIPELINE_DEEP_DIVE.md  06_ROPE_YARN_DEEP_DIVE.md  FMS_LAB_PLAN.md  PRINCIPAL_RESEARCH_REVIEW_2026.md  STRATEGIC_VISION_2026.md  TRAINING_SYSTEMS_ADVICE_2026.md
implementation_docs/: 00_MASTER_PLAN.md  01_DATA_PIPELINE_PRODUCTION.md  02_FLASH_MLA_ATTENTION_KERNEL.md  03_FUSED_MOE_EXPERT_PARALLELISM.md  04_DISTRIBUTED_TRAINING_FSDP.md  05_FP8_MIXED_PRECISION.md  06_MULTI_PHASE_TRAINING_ORCHESTRATION.md  07_INFERENCE_ENGINE.md  08_SPECULATIVE_DECODING_MTP.md  09_POST_TRAINING_SFT_DPO_RLVR.md  10_EVALUATION_BENCHMARKS.md  11_COMPLETE_FORWARD_BACKWARD_WALKTHROUGH.md  12_COMPLETE_TRAINING_STEP.md  13_PRODUCTION_INTEGRATION_GUIDE.md  14_WEIGHT_INIT_NUMERICAL_STABILITY.md  15_OPENAI_COMPATIBLE_API_SERVER.md  16_QUANTIZATION_INT8_INT4_SERVING.md  17_EVAL_GATE_SHIP_REJECT.md  18_DATA_LEAKAGE_CONTAMINATION_DETECTION.md  19_PERFORMANCE_LOAD_TESTING_HARNESS.md  20_SAFETY_EVALUATION_FRAMEWORK.md  21_EXPERIMENT_CONFIGS_REPRODUCIBILITY.md  22_END_TO_END_PIPELINE_ORCHESTRATION.md  23_INTERPRETABILITY_FRAMEWORK_NANOSEEK.md  24_MECHANISTIC_INTERPRETABILITY_CIRCUITS.md  25_ACTIVATION_ATTENTION_VISUALIZATION.md  26_INTERPRETABILITY_EVALUATION_REPORTING.md
model/: __init__.py  config.py  model.py
scripts/: __init__.py  base_eval.py  base_loss.py  dataloader.py  dataset.py  pre-train.py  scheduler.py  setup_data.py  (+5 more)
(+22 files in other folders)
